--- a/admin.css
+++ b/admin.css
@@ -405,9 +405,8 @@ tr:hover td {
 
 /* --- EDITOR & JSON --- */
 .split-view {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 24px;
+    display: flex;
+    flex-direction: column;
     height: calc(100vh - 200px);
 }
 
